# db_chat_report

./: DBManager.xlsx  README.md
ids-python-api/: .gitignore  README.md  config.py  data_api.py  file.db  pyproject.toml
ids-python-api/docs/: add_endpoint__for_pull.md  add_endpoint__for_save.md  add_endpoint_for_pull_new.md  authorization.md  the_logger.md
ids-python-api/docs/getting-started/: install_and_setup.md
ids-python-api/idsdata/: __init__.py  app.py  cli.py  config.py  logger.py
ids-python-api/idsdata/Models/: IdsUser.py  InterejectReturnedData.py  InterjectEnums.py  InterjectRequest.py  InterjectResponse.py  RequestParameter.py  request_context.py  table.py  xml_datatosave_parser.py  xml_request_context_parser.py
ids-python-api/idsdata/services/: base_integration.py  base_service.py
ids-python-api/idsdata/services/integrations/: sqlLite.py  sqlServer.py
ids-python-api/idsdata/utils/: enums.py  verify_token.py
